# text-to-pdf-py

./: .gitignore  LICENSE  Makefile  README.md  notes.md  pyproject.toml
sample/: input.md  input.txt
text2pdf/: __main__.py
